--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -56,8 +56,13 @@
 }
 
 .buttons-container a img {
-  width: 4rem;
-  margin-right: 0.8rem;
+  /* width: 4rem; */
+  margin-right: 2.4rem;
+}
+
+.buttons-container a+a img {
+  /* width: 4rem; */
+  margin-left: 10px;
 }
 
 .buttons-container a.study {
@@ -80,9 +85,70 @@
   font-size: 1.4rem;
 
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
 .total-connections img {
   margin-left: 0.8rem;
+}
+
+@media (min-width: 500px){
+  .buttons-container a+a img {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 550px) and (max-width: 1099px){
+  .hero-image {
+    height: 30rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  #page-landing-content {
+    max-width: 1100px;
+
+    display: grid;
+    grid-template-rows: 350px 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-areas: 
+      "logo hero hero"
+      "buttons buttons total";
+  }
+
+  .logo-container {
+    grid-area: logo;
+    text-align: left;
+    align-self: center;
+    margin: 0;
+  }
+
+  .logo-container img {
+    height: 100%;
+  }
+
+  .logo-container h2 {
+    text-align: initial;
+    font-size: 3.6rem;
+  }
+
+  .hero-image {
+    grid-area: hero;
+    justify-self: end;
+  }
+
+  .buttons-container {
+    grid-area: buttons;
+    justify-self: flex-start;
+  }
+
+  .buttons-container a {
+    font-size: 2.4rem;
+  }
+
+  .total-connections {
+    grid-area: total;
+    justify-self: end;
+  }
 }
